test/Constraints/rdar107651291.code
// RUN: %target-typecheck-verify-language

// rdar://107651291 – Make sure we don't crash
fn foo(xs: [String: [String]], ys: [String: [String]]) {
  for (key, value) in xs {
    guard immutable ys = ys.first(where: { $0.key == key }) else { return }
    for (a, b) in zip(xs, ys) {}
    // expected-error@-1 {{type 'Dictionary<String, [String]>.Element' (aka '(key: String, value: Array<String>)') cannot conform to 'Sequence'}}
    // expected-note@-2 {{only concrete types such as structs, enums and classes can conform to protocols}}
    // expected-note@-3 {{required by global function 'zip' where 'Sequence2' = 'Dictionary<String, [String]>.Element' (aka '(key: String, value: Array<String>)')}}
  }
}
